[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/ball.png" type="Texture2D" id=1]
[ext_resource path="res://entities/ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://shaders/palette.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/SelectedColor = Color( 0.18, 0.25, 0.32, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[node name="Ball" type="CharacterBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
rect = Rect2( -5, -5, 10, 10 )

[node name="ScaleTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="viewport_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="ScaleTimer" to="." method="_on_ScaleTimer_timeout"]
